Added some adjustments

--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
 <body>
     <div class="wrapper">
         <div class="header">
-            <h1>Maciej Wasser<h1>
-                    <span class="name-line"></span>
+            <div class="header-box">
+                <h1>Maciej Wasser<h1>
+                        <span class="name-line"></span>
+            </div>
+
         </div>
         <div class="sidebar">
             <a class="profilePicture" href="https://www.instagram.com/matthiev.angelo/?hl=en"><img
@@ -45,20 +48,6 @@
                     <span class="languages-description">Professional proficiency</span>
                     <p class="languages-item">Polish</p>
                     <span class="languages-description">Native proficiency</span>
-                </div>
-            </section>
-            <section class="interests">
-                <div class="interests">
-                    <h3>Interests:</h3>
-                    <p class="paragraph-interests">Spending time outdoors and exploring nature provides me
-                        with an opportunity to
-                        disconnect from the digital world and recharge my energy.
-                        <br>Additionally, I tinker with my car as a hobby. The sense of accomplishment that comes from
-                        diagnosing and fixing mechanical issues brings me a lot of satisfaction.
-                        It honed my attention to detail and troubleshooting abilities with hands-on experience.
-                        <br>Recently
-                        during my vacations, I took on a timber-frame house project that I'm building for myself.
-                    </p>
                 </div>
             </section>
         </div>
@@ -190,6 +179,21 @@
                         <h3>Navigation, Maritime Academy in Szczecin</h3>
                         <span class="data-range">2011-2014</span>
                     </div>
+                </div>
+            </section>
+            <section class="interests">
+                <div class="interests">
+                    <h2>Interests:</h2>
+                    <hr>
+                    <p class="paragraph-interests">Spending time outdoors and exploring nature provides me
+                        with an opportunity to
+                        disconnect from the digital world and recharge my energy.
+                        Additionally, I tinker with my car as a hobby. The sense of accomplishment that comes from
+                        diagnosing and fixing mechanical issues brings me a lot of satisfaction.
+                        It honed my attention to detail and troubleshooting abilities with hands-on experience.
+                        Recently
+                        during my vacations, I took on a timber-frame house project that I'm building for myself.
+                    </p>
                 </div>
             </section>
         </div>
