Sucesfully added toggles and some formating and adjustments

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <hr>
                         <div class="expirience-div">
                             <div class="list-item">
-                                <div>
+                                <div class="dot-line">
                                     <span class="dot"></span>
                                     <span class="line"></span>
                                 </div>
@@ -109,7 +109,7 @@
                                 </div>
                             </div>
                             <div class="list-item">
-                                <div>
+                                <div class="dot-line">
                                     <span class="dot"></span>
                                     <span class="line"></span>
                                 </div>
@@ -137,7 +137,7 @@
                                 </div>
                             </div>
                             <div class="list-item">
-                                <div>
+                                <div class="dot-line">
                                     <span class="dot"></span>
                                     <!-- <span class="line"></span> -->
                                 </div>
@@ -170,7 +170,7 @@
                         <hr>
                         <div class="education-div">
                             <div class="list-item">
-                                <div>
+                                <div class="dot-line">
                                     <span class="dot"></span>
                                     <span class="line"></span>
                                 </div>
@@ -196,7 +196,7 @@
                                 </div>
                             </div>
                             <div class="list-item">
-                                <div>
+                                <div class="dot-line">
                                     <span class="dot"></span>
                                     <span class="line"></span>
                                 </div>
@@ -207,7 +207,7 @@
                                 </div>
                             </div>
                             <div class="list-item">
-                                <div>
+                                <div class="dot-line">
                                     <span class="dot"></span>
                                     <!-- <span class="line"></span> -->
                                 </div>
