Added big portfolio icons on small screen, some margin adjustments

--- a/index.html
+++ b/index.html
@@ -30,16 +30,26 @@
             <p class="insta"><i class="fa-brands fa-instagram fa-2xs"></i>
             <section id="contact">
                 <div class="contact">
-                    <h3>Contact:</h3>
-                    <p><i class="fa-solid fa-location-dot"></i> Warsaw, Poland </p>
-                    <p><i class="fa-solid fa-envelope"></i></i>Mac.wasser@gmail.com</p>
-                    <p><i class="fa-solid fa-phone"></i>503 165 578</p>
-                    <p><i class="fa-brands fa-github"></i><a href="https://github.com/Maurice972">Maurice972</a></p>
-                    <p><i class="fa-brands fa-google"></i><a
-                            href="https://www.cloudskillsboost.google/public_profiles/15688820-95cd-4a8f-9c04-306451486bff">Cloud
-                            Skills</a></p>
-                    <p><i class="fa-brands fa-linkedin"></i><a href="">Linkedin</a></p>
-                    <p><i class="fa-brands fa-dribbble"></i><a href="https://dribbble.com/Angelo972">Dribbble</a></p>
+                    <div class="contact-info">
+                        <h3>Contacts:</h3>
+                        <p><i class="fa-solid fa-location-dot" style="margin: 0 3px 0 7px"></i> Warsaw, Poland </p>
+                        <p><i class="fa-solid fa-envelope"></i></i>Mac.wasser@gmail.com</p>
+                        <p><i class="fa-solid fa-phone"></i>503 165 578</p>
+                    </div>
+                    <div class="contact-portfolio">
+                        <p><a href="https://github.com/Maurice972"><i class="fa-brands fa-github"></i><span
+                                    class="contact-portfolio-label">Maurice972</span>
+                            </a></p>
+                        <p><a
+                                href="https://www.cloudskillsboost.google/public_profiles/15688820-95cd-4a8f-9c04-306451486bff"><i
+                                    class="fa-brands fa-google"></i><span class="contact-portfolio-label">Cloud
+                                    Skills</span></a></p>
+                        <p><a href=""><i class="fa-brands fa-linkedin" style="margin: 0 6px"></i>></i><span
+                                    class="contact-portfolio-label">Linkedin</span></a></p>
+                        <p><a href="https://dribbble.com/Angelo972"><i class="fa-brands fa-dribbble"></i><span
+                                    class="contact-portfolio-label">Dribbble</span></a>
+                        </p>
+                    </div>
                 </div>
             </section>
             <section id="languages">
