--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                 href="https://www.cloudskillsboost.google/public_profiles/15688820-95cd-4a8f-9c04-306451486bff"><i
                                     class="fa-brands fa-google"></i><span class="contact-portfolio-label">Cloud
                                     Skills</span></a></p>
-                        <p><a href=""><i class="fa-brands fa-linkedin" style="margin: 0 6px"></i>></i><span
+                        <p><a href=""><i class="fa-brands fa-linkedin" style="margin: 0 6px"></i></i><span
                                     class="contact-portfolio-label">Linkedin</span></a></p>
                         <p><a href="https://dribbble.com/Angelo972"><i class="fa-brands fa-dribbble"></i><span
                                     class="contact-portfolio-label">Dribbble</span></a>
