Language bars added

--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
                     </div>
                 </div>
             </section>
-            <section id="languages">
-                <div class="languages">
-                    <h3>Languages:</h3>
-                    <p class="languages-item">English</p>
-                    <span class="languages-description">Professional proficiency</span>
-                    <p class="languages-item">Polish</p>
-                    <span class="languages-description">Native proficiency</span>
-                </div>
-            </section>
+            <!------------------------ LANGUAGES SECTION ------------------------------->
+            <div class="languages">
+                <p class="languages-item">Polish:</p>
+                <div class="language-bar"><span class="language-percentage polish"></span></div>
+                <span class="languages-description">Native proficiency</span>
+                <p class="languages-item">English:</p>
+                <div class="language-bar"><span class="language-percentage english"></span></div>
+                <span class="languages-description">Professional proficiency</span>
+            </div>
         </div>
         <!---------------------------------- MAIN -------------------------------------->
         <div class="main">
